# xdbc-client

./: .dockerignore  .gitignore  .gitignore_local  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-tc.yml  docker-xdbc.yml
.devcontainer/: devcontainer.json
CSVSink/: CMakeLists.txt  CSVSink.cpp  CSVSink.h  CSVSink1.cpp  CSVSink2.cpp  main.cpp
Sinks/: CMakeLists.txt  main.cpp
Sinks/CSVSink/: CSVSink.cpp  CSVSink.h
Sinks/PQSink/: PQSink.cpp  PQSink.h
docker/: Dockerfile  Makefile
experiments/: README.md  build_and_start.sh  experiments_measure_resources.sh  hostsfile.txt  plot_client_results.sh  plot_xdbc_client_log.py  run_experiments.sh
experiments/experiment_scheduler/: configuration.py  experiment.py  get_local_measurements.py  job_runner.py  main.py  ssh_handler.py
experiments/feature_extraction_xdbc/: explore_features.py
experiments/model_optimizer/: Configs.py  Helpers.py  Metrics.py  NestedSSHHandler.py  Random_Sample_Generator.py  Stopping_Rules.py  Transfer_Data_Processor.py  additional_environments.py  cost_model_config_finder.py  data_transfer_wrapper.py  environments.py  main_experiments.py
experiments/model_optimizer/model_implementations/: Weighted_Combination_RF_Cost_Model.py  Weighted_Combination_RF_Cost_Model_old.py  lhs_search_optimizer.py  neural_network.py  openbox_ask_tell.py  own_random_search.py  random_forest.py  syne_tune_ask_tell.py
experiments/model_optimizer/notebooks/: Amortization_Time.ipynb  Best_Opt_time_Averaged_Over_envs_per_iterations.ipynb  Best_Time_Averaged_Std_per_Environment_and_Algorithm.ipynb  Cost_Model_Accuracy.ipynb  Grouped_Bar_Opt_Iterations_and_Best_Time.ipynb  Grouped_Bar_Opt_Time_and_Best_Time.ipynb  Histograms.ipynb  Plot_All_Runs.ipynb  Similarity_Environments.ipynb  Singe_Run_Estimate_Top_percent.ipynb  Time_Distribution_per_Environment.ipynb  best_time_after_iterations.ipynb  correlation.ipynb  list_results_files.ipynb  througput test.ipynb
experiments/model_optimizer/notebooks/.ipynb_checkpoints/: Amortization_Time-checkpoint.ipynb  Best_Opt_time_Averaged_Over_envs_per_iterations-checkpoint.ipynb  Best_Time_Averaged_Std_per_Environment_and_Algorithm-checkpoint.ipynb  Cost_Model_Accuracy-checkpoint.ipynb  Grouped_Bar_Opt_Iterations_and_Best_Time-checkpoint.ipynb  Grouped_Bar_Opt_Time_and_Best_Time-checkpoint.ipynb  Histograms-checkpoint.ipynb  Plot_All_Runs-checkpoint.ipynb  Similarity_Environments-checkpoint.ipynb  Singe_Run_Estimate_Top_percent-checkpoint.ipynb  Time_Distribution_per_Environment-checkpoint.ipynb  best_time_after_time-checkpoint.ipynb  correlation-checkpoint.ipynb  list_results_files-checkpoint.ipynb  througput test-checkpoint.ipynb
experiments/plots/: joel_explores_features.py  plot_client_results.sh  plot_xdbc_client_log.py  plot_xdbc_wait_times_log.py  xdbcclient.txt
experiments/plots/current_analysis/: remove_duplicates.py
experiments/plots/current_findings/: ideas_for_testcases.txt
experiments/prepare/: kill.sh  restart.sh
optimizer/: heuristic_optimizer_benchmark.py  main.py  optimize.py  runner.py  runner_ssh.py  test_envs.py
optimizer/config/: helpers.py  loader.py
optimizer/local_measurements/: test_runs.csv  test_runs_backup.csv  xdbc_client_timings.csv  xdbc_general_stats.csv  xdbc_server_timings.csv
optimizer/optimizers/: __init__.py  custom_optimizer.py  exhaustive.py  exhaustive_prune.py  optimizer.py  optimizer_queues.py
tests/: CMakeLists.txt  Tester.cpp  Tester.h  copy_test_file.sh  test_xclient.cpp
tests/helper_scripts/: create_clickhouse_test_table.sql  create_csv_file.sql  create_lineitem_table_and_import.sql  create_postgres_test_table.sql  create_test_table.sql  postgres_create_ss13husallm.sql
tests/schemas/: iotm.json
xdbc/: BufferGenerator.h  RuntimeEnv.h  SinkInterface.h  customQueue.h  env_predictor.cpp  env_predictor.h  metrics_calculator.h  xclient.cpp  xclient.h
xdbc/ControllerInterface/: WebSocketClient.cpp  WebSocketClient.h
xdbc/Decompression/: Decompressor.cpp  Decompressor.h
xdbc/EnvironmentReconfigure/: EnvironmentManager.h
